# huffman_compress

./: CMakeLists.txt  README.md  cmds.txt  decompressed.txt
src/: huffman.cpp  huffman.hpp  io.cpp  io.hpp  main.cpp  utils.cpp  utils.hpp
tests/: test_codegen.cpp  test_roundtrip.cpp
